# Rust-house

./: .gitignore  Cargo.toml  hello.md
adder/src/: lib.rs
basic_math/src/: lib.rs
fibonacci/src/: main.rs
grrs/: Cargo.toml  README.md
grrs/src/: main.rs
guessing_game/src/: main.rs
math-rikadai/: Cargo.toml
math-rikadai/src/: main.rs
minigrep/: README.md  output.txt
minigrep/src/: lib.rs  main.rs  poem.txt
rusty-journal/: Cargo.toml  test-journal.json
rusty-journal/src/: cli.rs  main.rs  tasks.rs
rusty_pizza/src/: lib.rs
rusty_pizza/tests/: pizzas.rs
src/: collection8.rs  enum6.rs  error9.rs  general3.rs  generic10.rs  lib.rs  main.rs  ownership.rs  ownership4.rs  package7.rs  struct5.rs
unit_test/src/: main.rs
