[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
clap = { version = "3.2.20", features = ["derive"] }
env_logger = "0.9.0"
indicatif = "0.17.0"
log = "0.4.17"
